--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                 <section class="about">
                     <h3>About Me</h3>
                     <p>I’m currently a second-year Master’s student in **Theoretical High-Energy Physics** at the University of Amsterdam. I hold a Master’s degree in Physics from King’s College London and a Bachelor’s degree in Materials Science and Engineering from QMES, NPU.</p>
-                    <p>Outside of physics, I have an interest in Japanese Sengoku history. I’m also a passionate football fan and have supported Manchester United for years. In my free time, I enjoy playing RTS games like *Age of Empires IV*, and I often unwind by listening to light music—Xeuphoria is my favorite composer.</p>
+                    <p>Outside of physics, I have an interest in Japanese Sengoku history. I’m also a passionate football fan and have supported Manchester United for years. In my free time, I enjoy playing RTS games like *Age of Empires IV*, and I often unwind by listening to light music—<a href="https://www.youtube.com/channel/UC8FpyBnxcUhu_bYmmJ0Yxmw">Xeuphoria</a> is my favorite composer.</p>
                 </section>
                 
                 <section class="research">
