--- a/index.html
+++ b/index.html
@@ -212,7 +212,14 @@
                     <ul>
                         <li><span class="icon"><i class="fas fa-envelope"></i></span> **Email (Primary):** <a href="mailto:xiaodawei528@gmail.com">xiaodawei528@gmail.com</a></li>
                         <li><span class="icon"><i class="fas fa-university"></i></span> **Email (UvA):** <a href="mailto:david.xiao@student.uva.nl">david.xiao@student.uva.nl</a></li>
-                        <li><span class="icon"><i class="fas fa-file-pdf"></i></span> <a href="[YOUR_CV_LINK_HERE]" target="_blank">My CV (PDF)</a></li>
+                        <li>
+    <span class="icon"><i class="fas fa-file-pdf"></i></span> 
+    <a 
+        href="https://docs.google.com/viewer?url=https://raw.githubusercontent.com/daweixiao528/daweixiao528.github.io/main/CV_Template__Copy_.pdf&embedded=true" 
+        target="_blank">
+        My CV (PDF)
+    </a>
+</li>
                         <li><span class="icon"><i class="fab fa-github"></i></span> <a href="https://github.com/YOUR_GITHUB_USERNAME" target="_blank">GitHub Profile</a></li>
                         <li style="margin-top: 20px; font-weight: 600;">-- Online Profiles --</li>
                         <li><span class="icon"><i class="fab fa-stack-exchange"></i></span> <a href="https://physics.stackexchange.com/users/327298/david-shaw" target="_blank">Stack Exchange</a></li>
@@ -239,7 +246,7 @@
                     <div class="timeline">
                         <div class="timeline-item">
                             <span class="year">2024 – 2026</span>
-                            <p><strong>MSc in Physics and Astronomy</strong></p>
+                            <p><strong>MSc in Physics and Astronomy (Theoretical physics track)</strong></p>
                             <p>University of Amsterdam (UvA), The Netherlands</p>
                         </div>
                         <div class="timeline-item">
@@ -255,17 +262,22 @@
                     </div>
                 </section>
                 
-                <section class="notes-projects">
+             <section class="notes-projects">
                     <h3>Notes & Projects</h3>
                     <ul class="notes-list">
                         <li>
-                            <p><strong>Quantum Field Theory Note</strong> (Draft Version—Covering Only Selected Topics) [<a href="[LINK_TO_QFT_NOTES]" target="_blank">PDF/Repo</a>]</p>
+                            <p><strong>Quantum Field Theory Note</strong> (Draft Version—Covering Only Selected Topics) [<a 
+                                href="https://docs.google.com/viewer?url=https://raw.githubusercontent.com/daweixiao528/daweixiao528.github.io/main/qft_note%20(1).pdf&embedded=true" 
+                                target="_blank">PDF View</a> / <a href="[LINK_TO_QFT_REPO]" target="_blank">Repo</a>]</p>
                         </li>
                         <li>
-                            <p><strong>Newman-Janis Algorithm Implementation/Notes</strong> [<a href="[LINK_TO_NJ_ALGO_NOTES]" target="_blank">PDF/Repo</a>]</p>
+                            <p><strong>Newman-Janis Algorithm Implementation/Notes</strong> [<a 
+                                href="https://docs.google.com/viewer?url=https://raw.githubusercontent.com/daweixiao528/daweixiao528.github.io/main/Note_on_Newman_Janis_algorithm.pdf&embedded=true" 
+                                target="_blank">PDF View</a> / <a href="[LINK_TO_NJ_ALGO_REPO]" target="_blank">Repo</a>]</p>
                         </li>
                     </ul>
-                </section>
+
+</section>
             </div>
         </main>
 
