--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                 <section class="about">
                     <h3>About Me</h3>
                     <p>I’m currently a second-year Master’s student in **Theoretical High-Energy Physics** at the University of Amsterdam. I hold a Master’s degree in Physics from King’s College London and a Bachelor’s degree in Materials Science and Engineering from QMES, NPU.</p>
-                    <p>Outside of physics, I have an interest in Japanese Sengoku history. I’m also a passionate football fan and have supported Manchester United for years. In my free time, I enjoy playing RTS games like *Age of Empires IV*, and I often unwind by listening to light music—<a href="https://www.youtube.com/channel/UC8FpyBnxcUhu_bYmmJ0Yxmw">Xeuphoria</a> is my favorite composer.</p>
+                    <p>Outside of physics, I have an interest in Japanese Sengoku history. I’m also a passionate football fan and have supported Manchester United for years. In my free time, I enjoy playing RTS games like Age of Empires IV, and I often unwind by listening to light music—<a href="https://www.youtube.com/channel/UC8FpyBnxcUhu_bYmmJ0Yxmw">Xeuphoria</a> is my favorite composer.</p>
                 </section>
                 
                 <section class="research">
@@ -261,22 +261,35 @@
                         </div>
                     </div>
                 </section>
-                
-             <section class="notes-projects">
-                    <h3>Notes & Projects</h3>
-                    <ul class="notes-list">
-                        <li>
-                            <p><strong>Quantum Field Theory Note</strong> (Draft Version—Covering Only Selected Topics) [<a 
-                                href="https://docs.google.com/viewer?url=https://raw.githubusercontent.com/daweixiao528/daweixiao528.github.io/main/qft_note%20(1).pdf&embedded=true" 
-                                target="_blank">PDF View</a> / <a href="[LINK_TO_QFT_REPO]" target="_blank">Repo</a>]</p>
-                        </li>
-                        <li>
-                            <p><strong>Newman-Janis Algorithm Implementation/Notes</strong> [<a 
-                                href="https://docs.google.com/viewer?url=https://raw.githubusercontent.com/daweixiao528/daweixiao528.github.io/main/Note_on_Newman_Janis_algorithm.pdf&embedded=true" 
-                                target="_blank">PDF View</a> / <a href="[LINK_TO_NJ_ALGO_REPO]" target="_blank">Repo</a>]</p>
-                        </li>
-                    </ul>
-
+                <section class="notes-projects">
+    <h3>Notes & Projects</h3>
+    <ul class="notes-list">
+        <li>
+            <p>
+                <a 
+                    href="https://docs.google.com/viewer?url=https://raw.githubusercontent.com/daweixiao528/daweixiao528.github.io/main/qft_note%20(1).pdf&embedded=true" 
+                    target="_blank">
+                    <strong>Quantum Field Theory Note</strong>
+                </a> 
+                (Draft Version—Covering Only Selected Topics) 
+                [<a 
+                    href="https://raw.githubusercontent.com/daweixiao528/daweixiao528.github.io/main/qft_note%20(1).pdf" 
+                    target="_blank">PDF</a>]
+            </p>
+        </li>
+        <li>
+            <p>
+                <a 
+                    href="https://docs.google.com/viewer?url=https://raw.githubusercontent.com/daweixiao528/daweixiao528.github.io/main/Note_on_Newman_Janis_algorithm.pdf&embedded=true" 
+                    target="_blank">
+                    <strong>Newman-Janis Algorithm Notes</strong>
+                </a> 
+                [<a 
+                    href="https://raw.githubusercontent.com/daweixiao528/daweixiao528.github.io/main/Note_on_Newman_Janis_algorithm.pdf" 
+                    target="_blank">PDF</a>]
+            </p>
+        </li>
+    </ul>
 </section>
             </div>
         </main>
