--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dawei Xiao (肖大维) | Theoretical Physics</title>
+        <title>Dawei Xiao (肖大维) | Homepage </title>
     
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="icon" href="https://via.placeholder.com/16x16?text=DX" type="image/x-icon">
