--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                 
                 <section class="research">
                     <h3>Research Interests</h3>
-                    <p>My research interests broadly concern the quantum aspects of de Sitter spacetime, with particular focus on the no-boundary wave function, path-integral formulations of quantum cosmology, and dS holography proposals.
+                    <p>My research interests broadly concern the quantum aspects of de Sitter spacetime, with particular focus on the path-integral formulations of quantum cosmology, the rule of observer and dS holography proposals.
                     </ul>
                 </section>
                 
