--- a/index.html
+++ b/index.html
@@ -566,12 +566,6 @@
             <div class="logo-dot"></div>
             <span>David Xiao · personal space</span>
         </div>
-        <nav class="top-nav">
-            <a href="#now">now</a>
-            <a href="#thinking">thinking</a>
-            <a href="#notes">notes</a>
-            <a href="#journey">journey</a>
-        </nav>
     </div>
 
     <!-- Hero：自我介绍 + 联系方式 -->
@@ -584,13 +578,11 @@
                         <h1>David Xiao</h1>
                         <div class="name-sub">肖大维 · he / him</div>
                     </div>
-                </div>
-                <div class="hero-pill">THEORETICAL PHYSICS</div>
-            </div>
+              
 
             <div class="hero-meta">
                 <strong>MSc student in Theoretical High-Energy Physics</strong><br>
-                Institute for Theoretical Physics, University of Amsterdam (UvA), The Netherlands
+                University of Amsterdam (UvA), The Netherlands
             </div>
 
             <div class="hero-text">
@@ -598,14 +590,6 @@
                 <br>When I’m not doing physics, I’m probably reading about Japanese Sengoku history,
                 watching Manchester United suffer, or queueing up for another game of <em>Age of Empires IV</em>
                 with light music (usually Xeuphoria) in the background.
-            </div>
-
-            <div class="hero-tags">
-                <span class="tag"><i class="fas fa-atom"></i>quantum cosmology</span>
-                <span class="tag"><i class="fas fa-globe-europe"></i>de Sitter holography</span>
-                <span class="tag"><i class="fas fa-futbol"></i>Manchester United fan</span>
-                <span class="tag"><i class="fas fa-gamepad"></i>RTS / AoE IV</span>
-                <span class="tag"><i class="fas fa-music"></i>Xeuphoria enjoyer</span>
             </div>
         </div>
 
@@ -649,7 +633,6 @@
             </div>
 
             <div class="hero-side-footnote">
-                中文 / English 都可以，邮件一般会在合理时间内回复。
             </div>
         </aside>
     </section>
@@ -661,7 +644,7 @@
             <!-- now -->
             <article class="block" id="now">
                 <div class="block-header">
-                    <h2 class="block-title">What I'm doing now <small>现在在干嘛</small></h2>
+                    <h2 class="block-title">What I'm doing now </h2>
                     <span class="block-tag">Amsterdam · 2024–2026</span>
                 </div>
                 <p>
@@ -679,7 +662,7 @@
             <!-- research / thinking -->
             <article class="block" id="thinking">
                 <div class="block-header">
-                    <h2 class="block-title">What I'm thinking about <small>研究兴趣</small></h2>
+                    <h2 class="block-title">What I'm thinking about </h2>
                     <span class="block-tag">mostly de Sitter</span>
                 </div>
                 <p>
@@ -694,8 +677,7 @@
 
                 <div class="chips">
                     <span class="chip">Quantum aspects of de Sitter</span>
-                    <span class="chip">Path-integral quantum cosmology</span>
-                    <span class="chip">Observer in cosmology</span>
+
                     <span class="chip">de Sitter holography</span>
                 </div>
             </article>
@@ -706,7 +688,7 @@
             <!-- Notes -->
             <article class="block" id="notes">
                 <div class="block-header">
-                    <h2 class="block-title">Notes & projects <small>随手写的一些东西</small></h2>
+                    <h2 class="block-title">Notes & projects </h2>
                     <span class="block-tag">work in progress</span>
                 </div>
 
@@ -755,7 +737,7 @@
             <!-- Journey / 教育经历 -->
             <article class="block" id="journey">
                 <div class="block-header">
-                    <h2 class="block-title">Where I've been <small>一路走来</small></h2>
+                    <h2 class="block-title">Where I've been </h2>
                     <span class="block-tag">academically speaking</span>
                 </div>
 
@@ -782,8 +764,6 @@
 
     <footer>
         &copy; 2025 Dawei Xiao. All rights reserved.
-        <br>
-        This is more of a home than a CV. Built with a bit of cosmology and a bit of <span class="heart">♥</span>.
     </footer>
 </div>
 </body>
