--- a/index.html
+++ b/index.html
@@ -389,12 +389,6 @@
             font-weight: 500;
         }
 
-        .block-title small {
-            font-size: 0.78rem;
-            color: var(--text-muted);
-            margin-left: 6px;
-        }
-
         .block-tag {
             font-size: 0.75rem;
             padding: 2px 7px;
@@ -578,7 +572,11 @@
                         <h1>David Xiao</h1>
                         <div class="name-sub">肖大维 · he / him</div>
                     </div>
-              
+                </div>
+                <!-- 右上角想加 tagline 可以放这里，比如：
+                <div class="hero-pill">THEORETICAL PHYSICS</div>
+                -->
+            </div>
 
             <div class="hero-meta">
                 <strong>MSc student in Theoretical High-Energy Physics</strong><br>
@@ -677,7 +675,6 @@
 
                 <div class="chips">
                     <span class="chip">Quantum aspects of de Sitter</span>
-
                     <span class="chip">de Sitter holography</span>
                 </div>
             </article>
@@ -704,7 +701,7 @@
                             <span class="note-label">draft</span>
                         </div>
                         <div class="note-meta">
-                            Selected topics in QFT only.
+                            Selected topics in QFT only, 来自过去跟朋友一起办的 seminar 的几次 talk。
                             [
                             <a href="https://raw.githubusercontent.com/daweixiao528/daweixiao528.github.io/main/qft_note%20(1).pdf"
                                target="_blank">
@@ -768,4 +765,3 @@
 </div>
 </body>
 </html>
- 
