--- a/index.html
+++ b/index.html
@@ -701,7 +701,7 @@
                             <span class="note-label">draft</span>
                         </div>
                         <div class="note-meta">
-                            Selected topics in QFT only, 来自过去跟朋友一起办的 seminar 的几次 talk。
+                            Selected topics in QFT only.
                             [
                             <a href="https://raw.githubusercontent.com/daweixiao528/daweixiao528.github.io/main/qft_note%20(1).pdf"
                                target="_blank">
