--- a/index.html
+++ b/index.html
@@ -719,7 +719,7 @@
                             </a>
                         </div>
                         <div class="note-meta">
-                            Quick notes on the Newman–Janis algorithm and related tricks.
+                            A short note on the Newman–Janis algorithm and its extensions.
                             [
                             <a href="https://raw.githubusercontent.com/daweixiao528/daweixiao528.github.io/main/Note_on_Newman_Janis_algorithm.pdf"
                                target="_blank">
