--- a/index.html
+++ b/index.html
@@ -665,12 +665,13 @@
                 </div>
                 <p>
                     Broadly speaking, I’m interested in the <strong>quantum aspects of de Sitter spacetime</strong>.
-                    More concretely, I think about:
+                    More concretely, I’m interested in:
                 </p>
                 <p>
-                    – <strong>Path-integral formulations of quantum cosmology</strong><br>
-                    – The role of the observer in cosmology and how we should encode “who is observing what”<br>
-                    – <strong>de Sitter holography</strong> proposals and what they might be telling us
+                    – Path-integral formulations of quantum cosmology<br>
+                    – The role of the observer<br>
+                    – The no-boundary wavefunction of the universe<br>
+                    – de Sitter holography proposals
                 </p>
 
                 <div class="chips">
@@ -701,7 +702,7 @@
                             <span class="note-label">draft</span>
                         </div>
                         <div class="note-meta">
-                            Selected topics in QFT only.
+                            Contain selected topics only. Adapted from material previously used in a student seminar.
                             [
                             <a href="https://raw.githubusercontent.com/daweixiao528/daweixiao528.github.io/main/qft_note%20(1).pdf"
                                target="_blank">
