--- a/index.html
+++ b/index.html
@@ -584,10 +584,8 @@
             </div>
 
             <div class="hero-text">
-                I think about <em>quantum aspects of our universe</em>, mostly in de Sitter spacetime.
-                <br>When I’m not doing physics, I’m probably reading about Japanese Sengoku history,
-                watching Manchester United suffer, or queueing up for another game of <em>Age of Empires IV</em>
-                with light music (usually Xeuphoria) in the background.
+                My academic interests are in the quantum aspects of our universe, mainly about formal theory in de Sitter spacetime.
+Outside of physics, I enjoy light (often Xeuphoria) and synth music, playing RTS games such as Age of Empires IV, and playing football. I’ve been a Manchester United fan since I was 13, and I’m also a beginner exploring theoretical neuroscience.
             </div>
         </div>
 
@@ -669,7 +667,7 @@
                 </p>
                 <p>
                     – Path-integral formulations of quantum cosmology<br>
-                    – The role of the observer<br>
+                    – The role of the observer in the semiclassical limit<br>
                     – The no-boundary wavefunction of the universe<br>
                     – de Sitter holography proposals
                 </p>
