--- a/index.html
+++ b/index.html
@@ -584,8 +584,8 @@
             </div>
 
             <div class="hero-text">
-                My academic interests are in the quantum aspects of our universe, mainly about formal theory in de Sitter spacetime.
-Outside of physics, I enjoy light (often Xeuphoria) and synth music, playing RTS games such as Age of Empires IV, and playing football. I’ve been a Manchester United fan since I was 13, and I’m also a beginner exploring theoretical neuroscience.
+                My academic interests lie in the quantum aspects of our universe, mainly in the formal theory of de&nbsp;Sitter spacetime and related questions in quantum field theory and gravity.
+                Outside of physics, I enjoy light and synth music (often Xeuphoria), playing RTS games such as Age of Empires&nbsp;IV, and playing football as an amateur. I’ve been a Manchester United fan since I was 13, and I’m also a beginner exploring theoretical neuroscience.
             </div>
         </div>
 
@@ -644,14 +644,10 @@ Outside of physics, I enjoy light (often Xeuphoria) and synth music, playing RTS
                     <span class="block-tag">Amsterdam · 2024–2026</span>
                 </div>
                 <p>
-                    I’m a second-year MSc student in the theoretical physics track at UvA.
-                    Most of my time goes into understanding how to make sense of
-                    <strong>quantum fields and gravity in de Sitter spacetime</strong>.
+                    I’m a second-year MSc student in the theoretical physics track at UvA. At the moment, I’m exploring the formal aspects of de&nbsp;Sitter spacetime, using the path integral formulation as my main tool.
                 </p>
                 <p>
-                    On the side, I keep revisiting QFT basics, play around with thought experiments
-                    about observers in cosmology, and slowly expand a set of notes that may or may not
-                    ever become lecture-style material.
+                    More broadly, I’m trying to understand how quantum field theory and gravity fit together in curved spacetime, so a lot of my time goes into learning formal QFT, building simple toy models, and seeing what survives when we move to a cosmological setting.
                 </p>
             </article>
 
@@ -662,14 +658,14 @@ Outside of physics, I enjoy light (often Xeuphoria) and synth music, playing RTS
                     <span class="block-tag">mostly de Sitter</span>
                 </div>
                 <p>
-                    Broadly speaking, I’m interested in the <strong>quantum aspects of de Sitter spacetime</strong>.
+                    Broadly speaking, I’m interested in the <strong>quantum aspects of de&nbsp;Sitter spacetime</strong>.
                     More concretely, I’m interested in:
                 </p>
                 <p>
                     – Path-integral formulations of quantum cosmology<br>
                     – The role of the observer in the semiclassical limit<br>
                     – The no-boundary wavefunction of the universe<br>
-                    – de Sitter holography proposals
+                    – de&nbsp;Sitter holography proposals
                 </p>
 
                 <div class="chips">
