--- a/index.html
+++ b/index.html
@@ -573,9 +573,6 @@
                         <div class="name-sub">肖大维 · he / him</div>
                     </div>
                 </div>
-                <!-- 右上角想加 tagline 可以放这里，比如：
-                <div class="hero-pill">THEORETICAL PHYSICS</div>
-                -->
             </div>
 
             <div class="hero-meta">
@@ -583,9 +580,9 @@
                 University of Amsterdam (UvA), The Netherlands
             </div>
 
+            <!-- 这里改成 本科工程 → 伦敦物理 → 现在阿姆斯特丹 -->
             <div class="hero-text">
-                My academic interests lie in the quantum aspects of our universe, mainly in the formal theory of de&nbsp;Sitter spacetime and related questions in quantum field theory and gravity.
-                Outside of physics, I enjoy light and synth music (often Xeuphoria), playing RTS games such as Age of Empires&nbsp;IV, and playing football as an amateur. I’ve been a Manchester United fan since I was 13, and I’m also a beginner exploring theoretical neuroscience.
+                I did my undergraduate studies in engineering in a joint NPU/QMUL programme. Along the way, I realised I was more drawn to fundamental questions than to engineering practice, so I moved to London to study physics. I am now a second-year MSc student in the theoretical physics track at UvA in Amsterdam.
             </div>
         </div>
 
@@ -635,19 +632,19 @@
 
     <!-- 中间内容区：左列 / 右列 -->
     <section class="sections">
-        <!-- 左列：now + research -->
+        <!-- 左列：About me + research -->
         <div class="sections-column">
-            <!-- now -->
+            <!-- About me（原来的 now 改名 + 内容替换） -->
             <article class="block" id="now">
                 <div class="block-header">
-                    <h2 class="block-title">What I'm doing now </h2>
+                    <h2 class="block-title">About me</h2>
                     <span class="block-tag">Amsterdam · 2024–2026</span>
                 </div>
                 <p>
-                    I’m a second-year MSc student in the theoretical physics track at UvA. At the moment, I’m exploring the formal aspects of de&nbsp;Sitter spacetime, using the path integral formulation as my main tool.
+                    My academic interests lie in the quantum aspects of our universe, mainly in the formal theory of de&nbsp;Sitter spacetime and related questions in quantum field theory and gravity.
                 </p>
                 <p>
-                    More broadly, I’m trying to understand how quantum field theory and gravity fit together in curved spacetime, so a lot of my time goes into learning formal QFT, building simple toy models, and seeing what survives when we move to a cosmological setting.
+                    Outside of physics, I enjoy light and synth music (often Xeuphoria), playing RTS games such as Age of Empires&nbsp;IV, and playing football as an amateur. I’ve been a Manchester United fan since I was 13, and I’m also a beginner exploring theoretical neuroscience.
                 </p>
             </article>
 
