--- a/index.html
+++ b/index.html
@@ -593,10 +593,11 @@
                 University of Amsterdam (UvA), The Netherlands
             </div>
 
-            <!-- 本科工程 → 伦敦物理 → 现在阿姆斯特丹，加一点颜色 -->
-            <div class="hero-text">
-                I did my undergraduate studies in <span class="text-primary">engineering</span> in a joint NPU/QMUL programme. Along the way, I realised I was more drawn to <span class="text-soft">fundamental questions</span> than to engineering practice, so I moved to <span class="text-accent">London</span> to study physics. I am now a second-year MSc student in the <span class="text-primary">theoretical physics track</span> at UvA in <span class="text-accent">Amsterdam</span>.
-            </div>
+
+           <div class="hero-text">
+    I did my undergraduate studies in <span class="text-primary">engineering</span> in a joint NPU/QMUL programme. Over time, I found myself more interested in the <span class="text-soft">theoretical side</span> than in engineering applications, so I moved to <span class="text-accent">London</span> to study physics. I am now a second-year MSc student in the <span class="text-primary">theoretical physics track</span> at UvA in <span class="text-accent">Amsterdam</span>.
+</div>
+
         </div>
 
         <aside class="hero-side-card">
