--- a/index.html
+++ b/index.html
@@ -655,7 +655,7 @@
                     <span class="block-tag">Amsterdam · 2024–2026</span>
                 </div>
                 <p>
-                    My academic interests lie in the <span class="text-primary">quantum aspects of our universe</span>, mainly in the <span class="text-soft">formal theory of de&nbsp;Sitter spacetime</span> and related questions in quantum field theory and gravity.
+                    My academic interests lie in the <span class="text-primary">quantum aspects of our universe</span>, mainly in the <span class="text-soft">formal theory of de&nbsp;Sitter spacetime</span> and related questions in cosmology.
                 </p>
                 <p>
                     Outside of physics, I enjoy light and synth music (often <span class="text-primary">Xeuphoria</span>), playing RTS games such as <span class="text-soft">Age of Empires&nbsp;IV</span>, and playing football as an amateur. I’ve been a <span class="text-accent">Manchester United</span> fan since I was 13, and I’m also a beginner exploring <span class="text-primary">theoretical neuroscience</span>.
